fix: fix navigation links alignment

--- a/coffee-house/sass/_common.scss
+++ b/coffee-house/sass/_common.scss
@@ -58,7 +58,6 @@ img {
 .link-txt:not([href="./"]) {
   @include hovered-devices {
     position: relative;
-    display: flex;
     cursor: pointer;
 
     &::after {
