--- a/coffee-house/sass/_header.scss
+++ b/coffee-house/sass/_header.scss
@@ -35,6 +35,7 @@
     }
 
     &-link {
+      display: flex;
       margin-bottom: 4px;
     }
   }
